css/_general.scss
/* ... */
/* Internet Explorer */
@-ms-keyframes fadein {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.fake-link {
    cursor: pointer;
    text-decoration: underline;
}

.loader,
.loader:before,
.loader:after {
    background: #5cb85c;
    -webkit-animation: load1 1s infinite ease-in-out;
    animation: load1 1s infinite ease-in-out;
    width: 1em;
    height: 4em;
}

.loader {
    color: #5cb85c;
    text-indent: -9999em;
    margin: 5px auto;
    position: relative;
    font-size: 11px;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-animation-delay: -0.16s;
    animation-delay: -0.16s;
}

.loader:before,
.loader:after {
    position: absolute;
    top: 0;
    content: '';
}

.loader:before {
    left: -1.5em;
    -webkit-animation-delay: -0.32s;
    animation-delay: -0.32s;
}

.loader:after {
    left: 1.5em;
}

@-webkit-keyframes load1 {
    0%,
    80%,
    100% {
        box-shadow: 0 0;
        height: 4em;
    }
    40% {
        box-shadow: 0 -2em;
        height: 5em;
    }
}

@keyframes load1 {
    0%,
    80%,
    100% {
        box-shadow: 0 0;
        height: 4em;
    }
    40% {
        box-shadow: 0 -2em;
        height: 5em;
    }
}

.text_small {
    font-size: 80%;
}

.btn {
    min-width: auto !important;
    max-width: auto !important;
}

#search-orders-form {
    padding: 0px;
}

.menuHideNav {
    width: calc(100% + 230px) !important;
    transform: translateX(-230px) !important;
}

.branding button {
    width: 45px;
    background: transparent;
    border: 0px solid white;
    margin-right: 10px;
    cursor: pointer;
}

.branding button I {
    font-size: 24px;
    color: white;
}

.branding {
    padding-left: 5px !important;
}

.manageOrderStatus {
    text-align: center !important;
}

.manageOrderStatus span {
    margin-bottom: 10px;
}

.fileviewer-contents {
    height: 100% !important;
}

h2.statement {
    color: #b7b7b7;
    text-align: center;
    margin: 30px auto;
}

.datagrid {
    width: 100% !important;
}

.datagrid-body {
    min-height: 0;
}

.text-badge {
    background: rgb(45, 113, 180);
    border-radius: 3px;
    color: #FFF;
    display: inline-block;
    font-size: 0.8em;
    margin-bottom: 10px;
    padding: 0 7px;
    width: auto !important;
}

.text-badge:before,
.text-badge:after {
    content: " ";
    display: table;
}

.text-badge:after {
    clear: both;
}

form, .form {
    padding: 0px !important;
}

app-login .modal-dialog {
    max-width: 360px !important;
}

app-login .modal-body {
    padding-bottom: 0 !important;
}

.toast-top-right {
    top: 86px;
}

/* modal on navigation too */
.modal-backdrop {
    top: -75px !important;
}

.modal-dialog.modal-sm {
    width: 14rem;
}

.content-area p {
    margin-top: 0px;
    margin-bottom: 0.5rem;
    font-size: 13px;
}

h1 {
    margin-top: 0;
    font-weight: bold;
    font-size: 22px;
    color: #383d48;
}

h2 {
    margin-top: 0;
    font-weight: bold;
    font-size: 18px;
    color: #383d48;
}

h3 {
    margin-top: 0;
    font-weight: bold;
    font-size: 16px;
    color: #383d48;
}

.well {
    background: white;
    border-radius: 3px;
    padding: 0px;
    margin: 20px;
    overflow: auto;
    border: 1px solid #dce1eb;
}

.well .row.panel-header {
    padding: 10px;
}

.well .row, .well .row.hidden {
    margin-right: 0px;
    margin-left: 0px;
}

.well .row.panel-body {
    padding: 10px;
    padding-top: 25px;
    padding-bottom: 25px;
    border-top: 1px solid gainsboro;
}

.well .row.panel-body.hidden {
    padding: 0px
}

.panel-header {
    a {
        color: black;
        line-height: 48px;
    }
    button {
        margin-right: 0;
    }
    .fa-chevron-right {
        transform: rotate(0deg);
        transition: transform .5s;
        &.rotate {
            transform: rotate(90deg);
        }
    }
}

.panel-body {
    opacity: 1;
    height: auto;
    overflow: hidden;
    transition: opacity .5s linear;
    &.hidden {
        opacity: 0;
        height: 0;
    }
}

.well .row.panel-header a i {
    float: left;
    margin-top: 18px;
    font-size: 12px;
}

.well .row.panel-header a h2 {
    float: left;
    padding-left: 10px;
}

clr-tab-content {

    .well {
        background: white;
        border: 0px;
        border-bottom: 1px dashed #e6e6e6;
        border-radius: 0px;
        padding: 0px;
        margin: 0px;
        overflow: auto;
    }

    .well .row.panel-header {
        padding: 0px;
    }

    .well .row .well {
        border: 0px;
        border-top: 1px dashed #e6e6e6;
        border-radius: 0px;
    }

    .well .row .well .row .well {
        border: 0px;
        border-top: 1px dashed #e6e6e6;
        border-radius: 0px;
    }

    .panel-header {

        a {
            color: black;
            line-height: 48px;
        }

        button {
            margin-right: 0;
        }

        .fa-chevron-right {
            transform: rotate(0deg);
            transition: transform .5s;

            &
            .rotate {
                transform: rotate(90deg);
            }

        }
    }
    .panel-body {
        padding-left: 0px;
        opacity: 1;
        height: auto;
        overflow: hidden;
        transition: opacity .5s linear;

        &
        .hidden {
            opacity: 0;
            height: 0;
            transition: opacity .5s linear;
        }

    }

    .well .row .well {
        margin-left: 30px;
        margin-top: 20px;
        margin-bottom:10px;
    }

}

